sorted into tree levels and there corresponding location in the level.